-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1, 5.4.2, 5.5.0, 5.12.1
-
d1bab5b1e3d28c0e2925ad3208cea785af755d54
if Korean is used for QML Text Component and wrapMode is set to Text.WordWrap does incorrect line braking. Instead of breaking by space, it breaks sentence by syllables.
Example:
import QtQuick 2.0 Rectangle { width: 480 height: 360 Text { anchors.centerIn: parent text: "안녕하세요 여러분!" width: 100 wrapMode: Text.WordWrap } }
Expected result:
안녕하세요 여러분!
Actual result:
안녕하세요 여 러분!